# pytest-pycodestyle

./: .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest_codestyle.py  pytest_pycodestyle.py  setup.cfg  setup.py  test_pytest_codestyle.py  tox.ini
.github/workflows/: main.yml
src/: pytest_pycodestyle.py
tests/: test_pytest_pycodestyle.py
